--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -88,6 +88,7 @@ main{
     border-radius: 10px;
     width: 30em;
     cursor: pointer;
+    box-shadow: 0px 10px 5px 0px rgba(0, 0, 0, 0.082);
 }
 .btn-proceed:hover{
     background-color: hsl(245, 75%, 65%);
