--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -107,5 +107,6 @@ main{
         background-image: url(../Images/pattern-background-desktop.svg);
         background-repeat: no-repeat;
         background-position: top;
+        background-size: contain;
         }
 }
